# wechat-rs

./: Cargo.toml
examples/echo/: Cargo.toml
examples/echo/src/: main.rs  main1.rs
src/: lib.rs  types.rs  utils.rs
src/client/: client.rs
src/client/api/: customservice.rs  group.rs  material.rs  media.rs  menu.rs  message.rs  misc.rs  qrcode.rs  user.rs
src/cryptography/: mod.rs  prp.rs
tests/client/: test_user.rs
